--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,15 +58,14 @@ jobs:
         run: swift test
 
   windows:
-    name: Windows (Swift 6.0)
+    name: Windows (Swift 6.1)
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v5
 
       - uses: compnerd/gha-setup-swift@main
         with:
-          branch: swift-6.0-release
-          tag: 6.0-RELEASE
+          swift-version: "6.1"
 
       - name: Build
         run: swift build
