--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
 
       - uses: compnerd/gha-setup-swift@main
         with:
-          swift-version: "6.1"
+          swift-build: "6.1-RELEASE"
 
       - name: Build
         run: swift build
