ci: migrate to SwiftyLab/setup-swift for Windows
- Replace compnerd/gha-setup-swift with SwiftyLab/setup-swift@latest
- Simpler syntax: only swift-version parameter needed
- Cross-platform action (works on macOS, Linux, Windows)
- Better reliability with semantic versioning support
- Built-in caching and GPG verification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,9 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - uses: compnerd/gha-setup-swift@main
+      - uses: SwiftyLab/setup-swift@latest
         with:
           swift-version: "6.1"
-          swift-build: "6.1-RELEASE"
 
       - name: Build
         run: swift build
