--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,21 +14,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # Note: Swift Testing framework requires Swift 6.0+
-  # macOS Swift 5.10 has backported Testing framework via Xcode 26.0
-  # Linux Swift 5.10 does NOT have Testing framework - use 6.2 only
-  macos-swift510:
-    name: macOS (Swift 5.10)
+  # Primary development workflow: Latest Swift on macOS with debug build
+  macos-latest:
+    name: macOS (Swift 6.2, debug)
     runs-on: macos-26
-    strategy:
-      matrix:
-        xcode: ['26.0']
-        config: ['debug', 'release']
     steps:
       - uses: actions/checkout@v5
 
-      - name: Select Xcode ${{ matrix.xcode }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Select Xcode 26.0
+        run: sudo xcode-select -s /Applications/Xcode_26.0.app
 
       - name: Print Swift version
         run: swift --version
@@ -37,48 +31,29 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .build
-          key: ${{ runner.os }}-spm-${{ hashFiles('Package.resolved') }}
+          key: ${{ runner.os }}-spm-${{ hashFiles('Package.swift') }}
           restore-keys: |
             ${{ runner.os }}-spm-
 
-      - name: Build
-        run: swift build -c ${{ matrix.config }}
+      # Note: swift test builds automatically, no separate build step needed
+      - name: Test
+        run: swift test -c debug
 
-      - name: Run tests
-        run: swift test -c ${{ matrix.config }}
+      - name: Validate Package.swift
+        run: swift package dump-package
 
-  macos-swift62:
-    name: macOS (Swift 6.2)
-    runs-on: macos-26
-    strategy:
-      matrix:
-        xcode: ['26.0']
-        config: ['debug', 'release']
-    steps:
-      - uses: actions/checkout@v5
+      - name: Run README verification tests
+        run: swift test --filter ReadmeVerificationTests
 
-      - name: Select Xcode ${{ matrix.xcode }}
-        run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+      - name: Check for API breaking changes
+        run: |
+          swift package diagnose-api-breaking-changes \
+            --breakage-allowlist-path .swift-api-breakage-allowlist || true
+        continue-on-error: true
 
-      - name: Print Swift version
-        run: swift --version
-
-      - name: Cache Swift packages
-        uses: actions/cache@v4
-        with:
-          path: .build
-          key: ${{ runner.os }}-spm-${{ hashFiles('Package.resolved') }}
-          restore-keys: |
-            ${{ runner.os }}-spm-
-
-      - name: Build
-        run: swift build -c ${{ matrix.config }}
-
-      - name: Run tests
-        run: swift test -c ${{ matrix.config }}
-
-  linux-swift62:
-    name: Ubuntu (Swift 6.2)
+  # Production validation: Latest Swift on Linux with release build
+  linux-latest:
+    name: Ubuntu (Swift 6.2, release)
     runs-on: ubuntu-latest
     container: swift:6.2
     steps:
@@ -88,47 +63,29 @@ jobs:
         uses: actions/cache@v4
         with:
           path: .build
-          key: ${{ runner.os }}-spm-${{ hashFiles('Package.resolved') }}
+          key: ${{ runner.os }}-spm-${{ hashFiles('Package.swift') }}
           restore-keys: ${{ runner.os }}-spm-
 
-      - name: Build
-        run: swift build
+      # Note: swift test builds automatically in release mode
+      - name: Test (release)
+        run: swift test -c release
 
-      - name: Run tests
-        run: swift test
-
-  readme:
-    name: README Code Examples
-    runs-on: macos-26
+  # Compatibility check: Minimum supported Swift version (6.0)
+  # Note: Swift Testing framework requires Swift 6.0+
+  linux-compat:
+    name: Ubuntu (Swift 6.0, compatibility)
+    runs-on: ubuntu-latest
+    container: swift:6.0
     steps:
       - uses: actions/checkout@v5
 
-      - name: Select Xcode
-        run: sudo xcode-select -s /Applications/Xcode_26.0.app
+      - name: Cache Swift packages
+        uses: actions/cache@v4
+        with:
+          path: .build
+          key: ${{ runner.os }}-swift60-spm-${{ hashFiles('Package.swift') }}
+          restore-keys: ${{ runner.os }}-swift60-spm-
 
-      - name: Run README verification tests
-        run: swift test --filter ReadmeVerificationTests
-
-      - name: Validate README examples compile
-        run: |
-          echo "✅ All README code examples are verified to compile and work"
-
-  documentation:
-    name: Documentation
-    runs-on: macos-26
-    steps:
-      - uses: actions/checkout@v5
-
-      - name: Select Xcode
-        run: sudo xcode-select -s /Applications/Xcode_26.0.app
-
-      - name: Build documentation
-        run: |
-          swift package \
-            --allow-writing-to-directory ./docs \
-            generate-documentation \
-            --target CSSTypes \
-            --output-path ./docs \
-            --transform-for-static-hosting \
-            --hosting-base-path swift-css-types
-        continue-on-error: true
+      # Note: swift test builds automatically
+      - name: Test (Swift 6.0)
+        run: swift test -c release
