--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -3,6 +3,12 @@ disabled_rules:
   - identifier_name
   - nesting  # Allow deeply nested enums for namespacing
   - redundant_discardable_let  # Preserve 'let _ =' in result builder contexts (required for Swift 6.0+)
+  - opening_brace  # Handled by swift-format
+  - trailing_comma  # Handled by swift-format
+  - orphaned_doc_comment  # Allow module-level documentation
+  - large_tuple  # CSS color validation requires tuples with multiple components
+  - mark  # Allow flexible MARK comment formatting
+  - redundant_string_enum_value  # Explicit enum values improve clarity for CSS keywords
 
 opt_in_rules:
   - empty_count
@@ -10,23 +16,17 @@ opt_in_rules:
   - sorted_imports
   - force_cast
   - force_try
-  - force_unwrapping
   - closure_spacing
   - operator_usage_whitespace
   - private_outlet
   - redundant_nil_coalescing
-  - unused_capture_list
-  - empty_string
-  - explicit_enum_raw_value
   - literal_expression_end_indentation
   - single_test_class
   - sorted_first_last
   - vertical_whitespace
-  - strict_fileprivate
   - legacy_random
   - no_extension_access_modifier
   - colon
-  - trailing_comma
   
 included:
   - Package.swift
@@ -48,3 +48,31 @@ colon:
 
 vertical_whitespace:
   max_empty_lines: 1
+
+# Increased length limits for test files
+type_body_length:
+  warning: 400
+  error: 500
+
+file_length:
+  warning: 750
+  error: 800
+
+# Allow short type names for CSS elements (RGB, HSL, CMYK, etc.)
+type_name:
+  min_length:
+    warning: 1
+    error: 0
+  max_length:
+    warning: 40
+    error: 50
+
+# Allow more function parameters for CSS functions with many values
+function_parameter_count:
+  warning: 8
+  error: 10
+
+# Increased cyclomatic complexity for CSS property parsing functions
+cyclomatic_complexity:
+  warning: 16
+  error: 20
